# chess-learn

./: README.md  package.json  pnpm-lock.yaml  ports.json
backend/: Cargo.toml  go.mod  main.go
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: pieces.json
frontend/src/components/ui/: ChessBoard.tsx  ChessPiece.tsx
frontend/src/lib/: fetch.ts
src/store/: themeStore.tsx
