[package]
name = "backend-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
reqwest = "0.12.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"
